添加了一个test服务

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>config-server-git</module>
         <module>config-client</module>
         <module>api-gateway</module>
+        <module>work-demo</module>
     </modules>
 	
 	<parent>
