--- a/eureka-consumer-feign-hystrix/pom.xml
+++ b/eureka-consumer-feign-hystrix/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>eureka-consumer-feign-hystrix</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>eureka-producer-feign</name>
     <description>Demo project for Spring Boot</description>
@@ -59,6 +59,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
 
     </dependencies>
