--- a/config-server-git/pom.xml
+++ b/config-server-git/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>config-server-git</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>config-server-git</name>
     <description>Demo project for Spring Boot</description>
