--- a/demo-pro/pom.xml
+++ b/demo-pro/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>demo-pro</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo-pro</name>
     <description>Demo project for Spring Boot</description>
