--- a/hystrix-dashboard/pom.xml
+++ b/hystrix-dashboard/pom.xml
@@ -59,6 +59,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
 
 
     </dependencies>
